build: Update Python environment

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,13 @@ image:
  - Ubuntu
  - Visual Studio 2017
 
+ environment:
+  matrix:
+  - TOXENV: py37
+
+install:
+  - pip install pyinstaller
+
 build_script:
   - ps: ./build.ps1
 
