--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,17 @@ image:
  - Ubuntu
  - Visual Studio 2017
 
+environment:
+  matrix:
+    - PYTHON: C:\Python37-x64
+      PYTHON_VERSION: "3.7"
+      PYTHON_ARCH: "64"
+  
 install:
-  - pip install --user pyinstaller
+  # Prepend newly installed Python to the PATH of this build (this cannot be
+  # done from inside the powershell script as it would require to restart
+  # the parent CMD process).
+  - set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
 
 build_script:
   - ps: ./build.ps1
