--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,12 @@
 version: 0.0.{build}
 image:
- - Ubuntu
+ - Ubuntu1804
  - Visual Studio 2017
 
 environment:
   matrix:
-    - PYTHON: C:\Python37-x64
-      PYTHON_VERSION: "3.7"
+    - PYTHON: C:\Python36-x64
+      PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "64"
 
 build_script:
