--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,7 +57,7 @@ deploy:
   provider: GitHub
   auth_token:
     secure: TGBEeIpw9ZL8SLhN4rpx6fo9LVr1QZfzbxj/Zl8gKa32+MVyykoXM4gwUnuY1Zna # your encrypted token from GitHub
-  artifact: /dist/*.exe
+  artifact: /dist\.*\.exe/
   draft: false
   prerelease: false
   on:
